update add project

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -12,7 +12,42 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="layout/layout"
 >
-    <head> </head>
+<head>
+    <style>
+
+        .tags-look .tagify__dropdown__item{
+            display: inline-block;
+            vertical-align: middle;
+            border-radius: 3px;
+            padding: .3em .5em;
+            border: 1px solid #CCC;
+            background: #F3F3F3;
+            margin: .2em;
+            font-size: .85em;
+            color: black;
+            transition: 0s;
+        }
+
+        .tags-look .tagify__dropdown__item--active{
+            color: black;
+        }
+
+        .tags-look .tagify__dropdown__item:hover{
+            background: lightyellow;
+            border-color: gold;
+        }
+
+        .tags-look .tagify__dropdown__item--hidden {
+            max-width: 0;
+            max-height: initial;
+            padding: .3em 0;
+            margin: .2em 0;
+            white-space: nowrap;
+            text-indent: -20px;
+            border: 0;
+        }
+    </style>
+    </head>
 
     <body layout:fragment="content">
         <div class="container-fluid position-relative bg-white d-flex p-0">
@@ -288,18 +323,7 @@
                                             >Architecture
                                             <span style="color: red"> *</span>
                                         </label>
-                                        <select
-                                            class="form-control select2"
-                                            id="architectures"
-                                            name="architectures"
-                                            multiple="multiple"
-                                        >
-                                            <option selected="selected">
-                                                orange
-                                            </option>
-                                            <option>white</option>
-                                            <option>purple</option>
-                                        </select>
+                                        <input type="text" class="form-control" id="architectures" name="architectures" placeholder="add value" value="css,html,javascript" />
                                     </div>
 
                                     <div class="col-lg-6">
@@ -310,18 +334,7 @@
                                             >System Outlines
                                             <span style="color: red"> *</span>
                                         </label>
-                                        <select
-                                            class="form-control select2 border-task-description"
-                                            id="systemOutlines"
-                                            name="systemOutlines"
-                                            multiple="multiple"
-                                        >
-                                            <option selected="selected">
-                                                orange
-                                            </option>
-                                            <option>white</option>
-                                            <option>purple</option>
-                                        </select>
+                                       <input type="text" class="form-control" id="systemOutlines" name="systemOutlines" placeholder="add value" value="analysis,sys_design,coding" />
                                     </div>
 
                                     <div class="col-lg-6">
@@ -334,19 +347,8 @@
                                                 *</span
                                             ></label
                                         >
+                                        <input type="text" class="form-control" id="deliverable" name="deliverable" placeholder="add value" value="source code,zip" />
 
-                                        <select
-                                            class="form-control select2 border-task-description"
-                                            id="deliverable"
-                                            name="deliverable"
-                                            multiple="multiple"
-                                        >
-                                            <option selected="selected">
-                                                orange
-                                            </option>
-                                            <option>white</option>
-                                            <option>purple</option>
-                                        </select>
                                     </div>
 
                                     <div
@@ -1207,8 +1209,34 @@
         <!-- sort (department, project), form validation and search bar behavior are all here -->
         <script src="/js/custome.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script>
+
+<!--        for archi,system,deli add project-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
+
+        <script>
+            const architectureInput = document.querySelector('#architectures');
+            const systemOutlinesInput = document.querySelector('#systemOutlines');
+            const deliverableInput = document.querySelector('#deliverable');
+
+            function initializeTagify(input) {
+                return new Tagify(input, {
+                    whitelist: ["A# .NET", "A# (Axiom)", "A-0 System", "A+", "A++", "ABAP", "ABC", "ABC ALGOL", "ABSET", "ABSYS", "ACC", "Accent", "Ace DASL", "ACL2", "Avicsoft", "ACT-III", "Action!", "ActionScript", "Ada", "Adenine", "Agda", "Agilent VEE", "Agora", "AIMMS", "Alef", "ALF", "ALGOL 58", "ALGOL 60", "ALGOL 68", "ALGOL W", "Alice", "Alma-0", "AmbientTalk", "Amiga E", "AMOS", "AMPL", "Apex (Salesforce.com)", "APL", "AppleScript", "Arc", "ARexx", "Argus", "AspectJ", "Assembly language", "ATS", "Ateji PX", "AutoHotkey", "Autocoder", "AutoIt", "AutoLISP / Visual LISP", "Averest", "AWK", "Axum", "Active Server Pages", "ASP.NET", "B", "Babbage", "Bash", "BASIC", "bc", "BCPL", "BeanShell", "Batch (Windows/Dos)", "Bertrand", "BETA", "Bigwig", "Bistro", "BitC", "BLISS", "Blockly", "BlooP", "Blue", "Boo", "Boomerang", "Bourne shell (including bash and ksh)", "BREW", "BPEL", "B", "C--", "C++ – ISO/IEC 14882", "C# – ISO/IEC 23270", "C/AL", "Caché ObjectScript", "C Shell", "Caml", "Cayenne", "CDuce", "Cecil", "Cesil", "Céu", "Ceylon", "CFEngine", "CFML", "Cg", "Ch", "Chapel", "Charity", "Charm", "Chef", "CHILL", "CHIP-8", "chomski", "ChucK", "CICS", "Cilk", "Citrine (programming language)", "CL (IBM)", "Claire", "Clarion", "Clean", "Clipper", "CLIPS", "CLIST", "Clojure", "CLU", "CMS-2", "COBOL – ISO/IEC 1989", "CobolScript – COBOL Scripting language", "Cobra", "CODE", "CoffeeScript", "ColdFusion", "COMAL", "Combined Programming Language (CPL)", "COMIT", "Common Intermediate Language (CIL)", "Common Lisp (also known as CL)", "COMPASS", "Component Pascal", "Constraint Handling Rules (CHR)", "COMTRAN", "Converge", "Cool", "Coq", "Coral 66", "Corn", "CorVision", "COWSEL", "CPL", "CPL", "Cryptol", "csh", "Csound", "CSP", "CUDA", "Curl", "Curry", "Cybil", "Cyclone", "Cython", "Java", "Javascript", "M2001", "M4", "M#", "Machine code", "MAD (Michigan Algorithm Decoder)", "MAD/I", "Magik", "Magma", "make", "Maple", "MAPPER now part of BIS", "MARK-IV now VISION:BUILDER", "Mary", "MASM Microsoft Assembly x86", "MATH-MATIC", "Mathematica", "MATLAB", "Maxima (see also Macsyma)", "Max (Max Msp – Graphical Programming Environment)", "Maya (MEL)", "MDL", "Mercury", "Mesa", "Metafont", "Microcode", "MicroScript", "MIIS", "Milk (programming language)", "MIMIC", "Mirah", "Miranda", "MIVA Script", "ML", "Model 204", "Modelica", "Modula", "Modula-2", "Modula-3", "Mohol", "MOO", "Mortran", "Mouse", "MPD", "Mathcad", "MSIL – deprecated name for CIL", "MSL", "MUMPS", "Mystic Programming L"],
+                    maxTags: 10,
+                    dropdown: {
+                        maxItems: 20,
+                        classname: "tags-look",
+                        enabled: 0,
+                        closeOnSelect: false,
+                    },
+                });
+            }
+
+            initializeTagify(architectureInput);
+            initializeTagify(systemOutlinesInput);
+            initializeTagify(deliverableInput);
+        </script>
+
 
         <script type="module">
             class project {
@@ -1601,18 +1629,16 @@
                 }
             }
 
-            $(document).ready(function () {
-                console.log("Document is ready!");
+            <!-- Include the jQuery library from a CDN -->
 
-                $("#architectures, #systemOutlines, #deliverable").select2({
-                    tags: true,
-                    width: "100%",
-                });
-            });
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-            console.log("error");
 
-            let quillEditors = document.querySelectorAll(
+
+        <script>
+
+
+        let quillEditors = document.querySelectorAll(
                 ".quill-editor-bubble"
             );
 
