--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -206,25 +206,11 @@
                                             name="client"
                                             >Client<span style="color: red">
                                                 *</span
-                                            ></label
-                                        >
-                                        <select
-                                            class="form-select border-task-description"
-                                            aria-label="Select Client"
-                                            data-live-search="true"
-                                            id="client"
-                                            name="client"
-                                        >
-                                            <option selected>
-                                                Choose Client
-                                            </option>
-                                            <option>Analysis</option>
-                                            <option>System Design</option>
-                                            <option>Coding</option>
-                                            <option>Testing</option>
-                                            <option>Deploy</option>
-                                            <option>Maintenance</option>
-                                            <option>Document</option>
+                                            ></label>
+                                        <select class="form-select" id="client" name="client">
+                                            <option value="1" selected>DAT1</option>
+                                            <option value="2">DAT2</option>
+                                            <option value="3">DAT3</option>
                                         </select>
                                     </div>
 
@@ -300,7 +286,7 @@
                                             >System Outlines
                                             <span style="color: red"> *</span>
                                         </label>
-                                       <input type="text" class="form-control" id="systemOutlines" name="systemOutlines" placeholder="add value" value="analysis,sys_design,coding" />
+                                       <input type="text" class="form-control" id="systemOutlines" name="systemOutlines" placeholder="add value" value="analysis,sys_design" />
                                     </div>
 
                                     <div class="col-lg-6">
@@ -1202,9 +1188,193 @@
             initializeTagify(architectureInput);
             initializeTagify(systemOutlinesInput);
             initializeTagify(deliverableInput);
+            // **********************end
+            // for client
+            var inputElm = document.querySelector('input[name="client_tags"]');
 
 
+            function tagTemplate(tagData){
+                return `
+        <tag title="${tagData.email}"
+                contenteditable='false'
+                spellcheck='false'
+                tabIndex="-1"
+                class="tagify__tag ${tagData.class ? tagData.class : ""}"
+                ${this.getAttributes(tagData)}>
+            <x title='' class='tagify__tag__removeBtn' role='button' aria-label='remove tag'></x>
+            <div>
+                <div class='tagify__tag__avatar-wrap'>
+                    <img onerror="this.style.visibility='hidden'" src="${tagData.avatar}">
+                </div>
+                <span class='tagify__tag-text'>${tagData.name}</span>
+            </div>
+        </tag>
+    `
+            }
 
+            function suggestionItemTemplate(tagData){
+                return `
+        <div ${this.getAttributes(tagData)}
+            class='tagify__dropdown__item ${tagData.class ? tagData.class : ""}'
+            tabindex="0"
+            role="option">
+            ${ tagData.avatar ? `
+            <div class='tagify__dropdown__item__avatar-wrap'>
+                <img onerror="this.style.visibility='hidden'" src="${tagData.avatar}">
+            </div>` : ''
+                }
+            <strong>${tagData.name}</strong>
+            <span>${tagData.email}</span>
+        </div>
+    `
+            }
+
+            function dropdownHeaderTemplate(suggestions){
+                return `
+        <div class="${this.settings.classNames.dropdownItem} ${this.settings.classNames.dropdownItem}__addAll">
+            <strong>${this.value.length ? `Add remaning ${suggestions.length}` : 'Add All'}</strong>
+            <span>${suggestions.length} members</span>
+        </div>
+    `
+            }
+
+            // initialize Tagify on the above input node reference
+            var tagify = new Tagify(inputElm, {
+                tagTextProp: 'name', // very important since a custom template is used with this property as text
+                enforceWhitelist: true,
+                skipInvalid: true, // do not remporarily add invalid tags
+                dropdown: {
+                    closeOnSelect: false,
+                    enabled: 0,
+                    classname: 'users-list',
+                    searchKeys: ['name', 'email']  // very important to set by which keys to search for suggesttions when typing
+                },
+                templates: {
+                    tag: tagTemplate,
+                    dropdownItem: suggestionItemTemplate,
+                    dropdownHeader: dropdownHeaderTemplate
+                },
+                whitelist: [
+                    {
+                        "value": 1,
+                        "name": "Justinian Hattersley",
+                        "avatar": "https://i.pravatar.cc/80?img=1",
+                        "email": "jhattersley0@ucsd.edu"
+                    },
+                    {
+                        "value": 2,
+                        "name": "Antons Esson",
+                        "avatar": "https://i.pravatar.cc/80?img=2",
+                        "email": "aesson1@ning.com"
+                    },
+                    {
+                        "value": 3,
+                        "name": "Ardeen Batisse",
+                        "avatar": "https://i.pravatar.cc/80?img=3",
+                        "email": "abatisse2@nih.gov"
+                    },
+                    {
+                        "value": 4,
+                        "name": "Graeme Yellowley",
+                        "avatar": "https://i.pravatar.cc/80?img=4",
+                        "email": "gyellowley3@behance.net"
+                    },
+                    {
+                        "value": 5,
+                        "name": "Dido Wilford",
+                        "avatar": "https://i.pravatar.cc/80?img=5",
+                        "email": "dwilford4@jugem.jp"
+                    },
+                    {
+                        "value": 6,
+                        "name": "Celesta Orwin",
+                        "avatar": "https://i.pravatar.cc/80?img=6",
+                        "email": "corwin5@meetup.com"
+                    },
+                    {
+                        "value": 7,
+                        "name": "Sally Main",
+                        "avatar": "https://i.pravatar.cc/80?img=7",
+                        "email": "smain6@techcrunch.com"
+                    },
+                    {
+                        "value": 8,
+                        "name": "Grethel Haysman",
+                        "avatar": "https://i.pravatar.cc/80?img=8",
+                        "email": "ghaysman7@mashable.com"
+                    },
+                    {
+                        "value": 9,
+                        "name": "Marvin Mandrake",
+                        "avatar": "https://i.pravatar.cc/80?img=9",
+                        "email": "mmandrake8@sourceforge.net"
+                    },
+                    {
+                        "value": 10,
+                        "name": "Corrie Tidey",
+                        "avatar": "https://i.pravatar.cc/80?img=10",
+                        "email": "ctidey9@youtube.com"
+                    },
+                    {
+                        "value": 11,
+                        "name": "foo",
+                        "avatar": "https://i.pravatar.cc/80?img=11",
+                        "email": "foo@bar.com"
+                    },
+                    {
+                        "value": 12,
+                        "name": "foo",
+                        "avatar": "https://i.pravatar.cc/80?img=12",
+                        "email": "foo.aaa@foo.com"
+                    },
+                ],
+                transformTag: (tagData, originalData) => {
+                    var {name, email} = parseFullValue(tagData.name)
+                    tagData.name = name
+                    tagData.email = email || tagData.email
+                },
+                validate({name, email}) {
+                    // when editing a tag, there will only be the "name" property which contains name + email (see 'transformTag' above)
+                    if( !email && name ) {
+                        var parsed = parseFullValue(name)
+                        name = parsed.name
+                        email = parsed.email
+                    }
+
+                    if( !name ) return "Missing name"
+                    if( !validateEmail(email) ) return "Invalid email"
+
+                    return true
+                }
+            })
+
+            // attach events listeners
+            tagify.on('dropdown:select', onSelectSuggestion) // allows selecting all the suggested (whitelist) items
+                .on('edit:start', onEditStart)  // show custom text in the tag while in edit-mode
+
+            function onSelectSuggestion(e){
+                // custom class from "dropdownHeaderTemplate"
+                if( e.detail.elm.classList.contains(`${tagify.settings.classNames.dropdownItem}__addAll`) )
+                    tagify.dropdown.selectAll();
+            }
+
+            function onEditStart({detail:{tag, data}}){
+                tagify.setTagTextNode(tag, `${data.name} <${data.email}>`)
+            }
+
+            // https://stackoverflow.com/a/9204568/104380
+            function validateEmail(email) {
+                return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)
+            }
+
+            function parseFullValue(value) {
+                // https://stackoverflow.com/a/11592042/104380
+                var parts = value.split(/<(.*?)>/g),
+                    name = parts[0].trim(),
+                    email = parts[1]?.replace(/<(.*?)>/g, '').trim();
+
+                return {name, email}
+            }
         </script>
 
 
