--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/lib/quill/quill.snow.css"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
 
     <link href="/css/daypilot.css" rel="stylesheet" type="text/css">
 
